<resources>
    <string name="app_name" translatable="false">OCR presenter</string>
    <string name="aadhaar_back_side_pic" translatable="false">Scan Aadhaar Card Back Side</string>
    <string name="aadhaar_front_side_pic" translatable="false">Scan Aadhaar Card Front Side</string>
    <string name="qr_code">QR Code</string>
    <string name="scan_card">Scan Card</string>
    <string name="choose_aadhaar_options_title">Select Aadhaar Scan Method</string>
    <string name="toast_image_intent_null">Image Picker Option is missing!!!</string>
    <string name="scan_new_card">Click Here to Scan Card</string>
    <string name="click_for_photo">Click_For_Photo</string>

    <string name="big_qr_code">Step 1: Scan Big QR Code</string>
    <string name="small_qr_code">Scan Small QR Code</string>
    <string name="method_1_small_qr_code">Method 1: Small QR Code</string>
    <string name="method_2_big_qr_code">Method 2: Big QR Code</string>
    <string name="method_3_capture_photo">Method 3: Take Aadhaar Card Photo</string>
    <string name="big_qr_aadhaar_number">Step 2: Take Photo of Aadhaar Number</string>
    <string name="aadhaar_card_front_side_photo">Step 1: Take Aadhaar Card Front Side Photo</string>
    <string name="aadhaar_card_back_side_photo">Step 2: Take Aadhaar Card Back Side Photo</string>
    <string name="or">(OR)</string>
    <string name="scan_type">scan type</string>
    <string name="front_side">Front side</string>
    <string name="back_side">Back side</string>
    <string name="back_side_focus_request">Please focus camera on the back side of the Aadhaar Card and click Capture</string>
    <string name="big_qr_ocr">Big QR OCR</string>
    <string name="aadhaar_number_focus_request">Please focus camera on the Aadhaar card number only and click Capture</string>
    <string name="path">path</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="transgender">Transgender</string>
    <string name="failed_to_start_camera">Failed to start camera: </string>
    <string name="photo_catured_failed">Photo capture failed: </string>
    <string name="signature_data_big_qr_ocr">Signature Data Big QR OCR</string>
    <string name="signature_qr_data_captured">Big QR Code Scanned. Please Capture the Back Side Of the Aadhaar Card</string>
    <string name="big_qr_ocr_capture_text">Big QR Code Scanned. Please Capture the Photo of the Aadhaar Number</string>


</resources>